build: Modifiquei as versões das dependências utilizadas pois o último commit havia quebrado todos os testes. Tudo está funcionando novamente.
test: Removi um teste que mockava o gson. Achei desnecessário.